--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "openai": "^6.7.0",
+    "paystack-api": "^2.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
